--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -29,10 +29,34 @@ jobs:
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
           
-          # Extract version number and increment patch version
-          VERSION=$(echo $LATEST_TAG | sed 's/v//')
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          NEW_PATCH=$((PATCH + 1))
+          # Read major.minor from VERSION file
+          if [ -f "VERSION" ]; then
+            MAJOR_MINOR=$(cat VERSION)
+            echo "major_minor=$MAJOR_MINOR" >> $GITHUB_OUTPUT
+          else
+            echo "VERSION file not found, using 0.0"
+            MAJOR_MINOR="0.0"
+            echo "major_minor=$MAJOR_MINOR" >> $GITHUB_OUTPUT
+          fi
+          
+          # Extract current patch version from latest tag
+          CURRENT_VERSION=$(echo $LATEST_TAG | sed 's/v//')
+          IFS='.' read -r CURRENT_MAJOR CURRENT_MINOR CURRENT_PATCH <<< "$CURRENT_VERSION"
+          
+          # Extract major.minor from VERSION file
+          IFS='.' read -r MAJOR MINOR <<< "$MAJOR_MINOR"
+          
+          # Check if major.minor changed in VERSION file
+          if [ "$MAJOR.$MINOR" != "$CURRENT_MAJOR.$CURRENT_MINOR" ]; then
+            # Major or minor version changed, reset patch to 0
+            NEW_PATCH=0
+            echo "Major.minor version changed in VERSION file: $CURRENT_MAJOR.$CURRENT_MINOR → $MAJOR.$MINOR"
+          else
+            # Same major.minor, increment patch
+            NEW_PATCH=$((CURRENT_PATCH + 1))
+            echo "Incrementing patch version: $CURRENT_PATCH → $NEW_PATCH"
+          fi
+          
           NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
           NEW_TAG="v$NEW_VERSION"
           
